--- a/views/super_hero.erb
+++ b/views/super_hero.erb
@@ -1,1 +1,33 @@
+Create a Team and Heroes!<br><br>
+<form action="/teams" method="post">
+  <label for="team">Team Name:</label>
+  <input id="team" type="text" name="team[name]" value=""><br>
+  <label for="motto">Team Motto:</label>
+  <input id="motto" type="text" name="team[motto]" value=""><br>
 
+  <h4>Hero 1</h4>
+  <label for="name">Hero's Name:</label>
+  <input id="name" type="text" name="team[members][0][name]" value=""><br>
+  <label for="power">Hero's Power:</label>
+  <input id="power" type="text" name="team[members][0][power]" value=""><br>
+  <label for="bio">Hero's Biography:</label>
+  <input id="bio" type="text" name="team[members][0][bio]" value="">
+
+  <h4>Hero 2</h4>
+  <label for="name">Hero's Name:</label>
+  <input id="name" type="text" name="team[members][1][name]" value=""><br>
+  <label for="power">Hero's Power:</label>
+  <input id="power" type="text" name="team[members][1][power]" value=""><br>
+  <label for="bio">Hero's Biography:</label>
+  <input id="bio" type="text" name="team[members][1][bio]" value="">
+
+  <h4>Hero 3</h4>
+  <label for="name">Hero's Name:</label>
+  <input id="name" type="text" name="team[members][2][name]" value=""><br>
+  <label for="power">Hero's Power:</label>
+  <input id="power" type="text" name="team[members][2][power]" value=""><br>
+  <label for="bio">Hero's Biography:</label>
+  <input id="bio" type="text" name="team[members][2][bio]" value="">
+  <br><br>
+  <input type="submit" name="submit" value="Submit">
+</form>
